--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
+
+* {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #B9F3E4;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper {
+    display: flex;
+    justify-content: center;
+    width: 1200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.search-input {
+   border: none;
+   background-color: #F6E6C2;
+   color: #EA8FEA;
+   font-size: 1.2rem;
+    width: .01rem;
+    padding: .7rem;
+    transition: 500ms width ease-in-out;
+    letter-spacing: .02rem;
+    
 }
 
-.App-link {
-  color: #61dafb;
+.search-input:focus {
+    outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-input::placeholder {
+    color: lightgray;
+}
+
+.search-input.active {
+    box-shadow: 5px 2px black;
+    width: 15rem;
+   
+    border: 1px solid black;
+}
+
+.search-button {
+    display: inline-block;
+    margin-left: -45px;
+    width: 3rem;
+    height: 3rem;
+    background-color: #EA8FEA;
+    border: none;
+    border: 1px solid black;
+
+}
+
+.search-button:hover {
+    cursor: pointer;
 }
